Commit - Monolith code refactoring V2